Fixed buildx issure

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,4 +18,5 @@ jobs:
 
       run: |
         echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "stephen10121" --password-stdin
+        docker buildx create --use
         docker buildx build --platform=linux/amd64,linux/arm64 --push -t stephen10121/mqttendpoint:1.0 .
