--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,17 @@ on:
     branches: [ main ]
 
 jobs:
+  test_pull_request:
+    runs-on: ubuntu-latest
+    steps:
+      - name: "Running unit tests."
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+
   build_container:
     runs-on: ubuntu-latest
 
